<resources>
    <string name="app_name">Task Manager</string>
    <string name="add_task">Add Task</string>
    <string name="add_category">Add Category</string>
    <string name="category_filter">标签</string>
    <string name="save_task">保存任务</string>
    <string name="task_description">任务描述</string>
    <string name="task_name">任务名称</string>
    <string name="task_dueDate">截止日期</string>
    <string name="category_id">分类id</string>
    <string name="select_all">全选</string>
    <string name="delete">删除</string>
    <!--    <string name="Select All">全选</string>-->
<!--    <string name="category_id">分类id</string>-->



</resources>