<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskEditActivity">

    <EditText
        android:id="@+id/editTextTaskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_description"
        app:layout_constraintTop_toBottomOf="@id/editTextTaskName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/editTextDueDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_dueDate"
        app:layout_constraintTop_toBottomOf="@id/editTextTaskDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/editTextCategoryId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/category_id"
        app:layout_constraintTop_toBottomOf="@id/editTextDueDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/btnSaveTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_task"
        app:layout_constraintTop_toBottomOf="@id/editTextCategoryId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>